--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-<head>
-  <title>Hello World</title>
-</head>
-<body>
-  <h1>Hi WORLD</h1>
-</body>
+  <head>
+    <title>Hello World</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <h1>Hi WORLD</h1>
+  </body>
 </html>
